# estimator

./: .travis.yml  README.md  estimator.cabal
src/Numeric/Estimator/: Augment.hs  Class.hs  KalmanFilter.hs  Matrix.hs
src/Numeric/Estimator/Model/: Coordinate.hs  Pressure.hs  SensorFusion.hs  Symbolic.hs
